# authorization-service

./: .env.dist  .gitignore  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  serverless.yml.local
app/adapters/rest/: authorization_controller.py  client_controller.py  exception_serializer.py  serializer.py  user_controller.py
app/adapters/rest/dtos/: client_dto.py  code_grant_dto.py  exceptions.py  login_dto.py  user_dto.py
app/business_logic/: authorizatiaon_service.py  client_service.py  exceptions.py  models.py  user_service.py
app/business_logic/repositories/: authorization_repository.py  client_repository.py  resource_repository.py  user_repository.py
app/config/: config.py  database.py  on_startup.py
local-stack/: Dockerfile  docker-compose.yaml
migrations/: env.py
migrations/versions/: 065987b3f5e8_2022_04_22.py  1fa00361cf63_2022_04_23.py  2dabf3c127c8_2022_04_23.py
scripts/: generate_keys.py
